--- a/views/userList.ejs
+++ b/views/userList.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
   <% include ../static/assets/includes/header.ejs %>
-  <div id="container"></div>
+  <div id="parentContainer"></div>
   <% include ../static/assets/includes/demoFooter.ejs %>
 </body>
 </html>
