--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,9 +12,9 @@
 <form action="/register" method="post">
   <input type="text" placeholder="Username" name="username" autofocus required /><br />
   <input type="password" placeholder="Password" name="password" required /><br />
-  <input type="text" placeholder="Full Name" name="fullName" optional /><br />
-  <input type="text" placeholder="City" name="city" optional /><br />
-  <input type="text" placeholder="State" name="state" optional /><br />
+  <input type="text" placeholder="Name (optional)" name="fullName" optional /><br />
+  <input type="text" placeholder="City (optional)" name="city" optional /><br />
+  <input type="text" placeholder="State (optional)" name="state" optional /><br />
   <%if(data.warning===true){%><span id="warning">Invalid. Try again.</span><%}%><br />
   <input type="submit"><button id="submit">JOIN US</button></input>
 </form>
